--- a/.github/workflows/main_TimelessHorror.yml
+++ b/.github/workflows/main_TimelessHorror.yml
@@ -1,51 +1,42 @@
-# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
-# More GitHub Actions for Azure: https://github.com/Azure/actions
-
-name: Build and deploy container app to Azure Web App - TimelessHorror
+name: Build and push Docker image
 
 on:
-  push:
-    branches:
-      - main
-  workflow_dispatch:
+  release:
+    types: [created]
 
 jobs:
-  build:
-    runs-on: 'ubuntu-latest'
-
+  build-and-push-docker-image:
+    runs-on: self-hosted
     steps:
-    - uses: actions/checkout@v2
+      - name: Checkout
+        uses: actions/checkout@v4
 
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v2
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v2
 
-    - name: Log in to registry
-      uses: docker/login-action@v2
-      with:
-        registry: https://github.com/plankanban/planka/
-        username: ${{ secrets.AzureAppService_ContainerUsername_9075cc124e684e0bae6c60dbe3514456 }}
-        password: ${{ secrets.AzureAppService_ContainerPassword_0312a103c1e34631b625353adef7ffa8 }}
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
 
-    - name: Build and push container image to registry
-      uses: docker/build-push-action@v3
-      with:
-        push: true
-        tags: github.com/plankanban/planka/${{ secrets.AzureAppService_ContainerUsername_9075cc124e684e0bae6c60dbe3514456 }}/appsvc/staticsite:${{ github.sha }}
-        file: ./Dockerfile
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v2
+        with:
+          registry: ghcr.io
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
-  deploy:
-    runs-on: ubuntu-latest
-    needs: build
-    environment:
-      name: 'production'
-      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
+      - name: Set version
+        uses: actions/github-script@v6
+        id: set-version
+        with:
+          result-encoding: string
+          script: return context.payload.release.tag_name.replace('v', '')
 
-    steps:
-    - name: Deploy to Azure Web App
-      id: deploy-to-webapp
-      uses: azure/webapps-deploy@v2
-      with:
-        app-name: 'TimelessHorror'
-        slot-name: 'production'
-        publish-profile: ${{ secrets.AzureAppService_PublishProfile_597c38a9cb484b448d7d52e4ff85aebe }}
-        images: 'github.com/plankanban/planka/${{ secrets.AzureAppService_ContainerUsername_9075cc124e684e0bae6c60dbe3514456 }}/appsvc/staticsite:${{ github.sha }}'
+      - name: Build and push
+        uses: docker/build-push-action@v4
+        with:
+          context: .
+          platforms: linux/amd64,linux/arm64,linux/arm/v7
+          push: true
+          tags: |
+            ghcr.io/plankanban/planka:latest
+            ghcr.io/plankanban/planka:${{ steps.set-version.outputs.result }}
